# libpatchfinder

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac  liboffsetfinder64.pc.in  libpatchfinder.pc.in
.github/workflows/: ci.yml  main.yml
example/offsetexporter/: findjboffsets.sh  gen.h  template_dynamic_info.h
include/: Makefile  Makefile.am  Makefile.in
include/liboffsetfinder64/: OFexception.hpp  common.h  exception.hpp  ibootpatchfinder64.hpp  ibootpatchfinder64_base.hpp  ibootpatchfinder64_iOS14.hpp  insn.hpp  kernelpatchfinder64.hpp  liboffsetfinder64.hpp  machopatchfinder64.hpp  patch.hpp  patchfinder64.hpp  vmem.hpp  vsegment.hpp
include/libpatchfinder/: OFexception.hpp  machopatchfinder32.hpp  machopatchfinder64.hpp  patch.hpp  patchfinder.hpp  patchfinder32.hpp  patchfinder64.hpp
include/libpatchfinder/ibootpatchfinder/: ibootpatchfinder.hpp  ibootpatchfinder32.hpp  ibootpatchfinder64.hpp
include/libpatchfinder/kernelpatchfinder/: kernelpatchfinder.hpp  kernelpatchfinder32.hpp  kernelpatchfinder64.hpp
liboffsetfinder64/: Makefile  Makefile.am  Makefile.in  all_liboffsetfinder.hpp  exception.cpp  exception.hpp  ibootpatchfinder64.cpp  ibootpatchfinder64.hpp  ibootpatchfinder64_base.cpp  ibootpatchfinder64_iOS14.cpp  insn.cpp  insn.hpp  kernelpatchfinder64.cpp  kernelpatchfinder64.hpp  kernelpatchfinder64iOS13.cpp  kernelpatchfinder64iOS13.hpp  liboffsetfinder64.cpp  machopatchfinder64.cpp  machopatchfinder64.hpp  main.cpp  patch.cpp  patchfinder64.cpp  vmem.cpp  vmem.hpp  vsegment.cpp
liboffsetfinder64.xcodeproj/: project.pbxproj
liboffsetfinder64/.deps/: liboffsetfinder64_la-exception.Plo  liboffsetfinder64_la-insn.Plo  liboffsetfinder64_la-liboffsetfinder64.Plo  liboffsetfinder64_la-patch.Plo
libpatchfinder/: Makefile.am  StableHash.cpp  StableHash.h  all32.h  all64.h  machopatchfinder32.cpp  machopatchfinder64.cpp  main.cpp  patch.cpp  patchfinder.cpp  patchfinder32.cpp  patchfinder64.cpp
libpatchfinder.xcodeproj/: project.pbxproj
libpatchfinder/ibootpatchfinder/: Makefile.am  ibootpatchfinder.cpp  ibootpatchfinder32.cpp  ibootpatchfinder32_base.cpp  ibootpatchfinder32_base.hpp  ibootpatchfinder32_iOS11.cpp  ibootpatchfinder32_iOS11.hpp  ibootpatchfinder32_iOS12.cpp  ibootpatchfinder32_iOS12.hpp  ibootpatchfinder32_iOS13.cpp  ibootpatchfinder32_iOS13.hpp  ibootpatchfinder32_iOS4.cpp  ibootpatchfinder32_iOS4.hpp  ibootpatchfinder32_iOS5.cpp  ibootpatchfinder32_iOS5.hpp  ibootpatchfinder32_iOS8.cpp  ibootpatchfinder32_iOS8.hpp  ibootpatchfinder32_iOS9.cpp  ibootpatchfinder32_iOS9.hpp  ibootpatchfinder64.cpp  ibootpatchfinder64_base.cpp  ibootpatchfinder64_base.hpp  ibootpatchfinder64_iOS10.cpp  ibootpatchfinder64_iOS10.hpp  ibootpatchfinder64_iOS12.cpp  ibootpatchfinder64_iOS12.hpp  ibootpatchfinder64_iOS13.cpp  ibootpatchfinder64_iOS13.hpp  ibootpatchfinder64_iOS14.cpp  ibootpatchfinder64_iOS14.hpp  ibootpatchfinder64_iOS15.cpp  ibootpatchfinder64_iOS15.hpp  ibootpatchfinder64_iOS16.cpp  ibootpatchfinder64_iOS16.hpp  ibootpatchfinder64_iOS17.cpp  ibootpatchfinder64_iOS17.hpp  ibootpatchfinder64_iOS7.cpp  ibootpatchfinder64_iOS7.hpp  ibootpatchfinder64_iOS9.cpp  ibootpatchfinder64_iOS9.hpp  (+2 more)
libpatchfinder/kernelpatchfinder/: Makefile.am  kernelpatchfinder.cpp  kernelpatchfinder32.cpp  kernelpatchfinder32_base.cpp  kernelpatchfinder32_base.hpp  kernelpatchfinder32_iOS11.cpp  kernelpatchfinder32_iOS11.hpp  kernelpatchfinder32_iOS3.cpp  kernelpatchfinder32_iOS3.hpp  kernelpatchfinder32_iOS5.cpp  kernelpatchfinder32_iOS5.hpp  kernelpatchfinder32_iOS6.cpp  kernelpatchfinder32_iOS6.hpp  kernelpatchfinder32_iOS8.cpp  kernelpatchfinder32_iOS8.hpp  kernelpatchfinder32_iOS9.cpp  kernelpatchfinder32_iOS9.hpp  kernelpatchfinder64.cpp  kernelpatchfinder64_base.cpp  kernelpatchfinder64_base.hpp  kernelpatchfinder64_iOS12.cpp  kernelpatchfinder64_iOS12.hpp  kernelpatchfinder64_iOS13.cpp  kernelpatchfinder64_iOS13.hpp  kernelpatchfinder64_iOS15.cpp  kernelpatchfinder64_iOS15.hpp  kernelpatchfinder64_iOS16.cpp  kernelpatchfinder64_iOS16.hpp  kernelpatchfinder64_iOS17.cpp  kernelpatchfinder64_iOS17.hpp  kernelpatchfinder64_iOS8.cpp  kernelpatchfinder64_iOS8.hpp  kernelpatchfinder64_iOS9.cpp  kernelpatchfinder64_iOS9.hpp  sbops64.h
offsetfinder64/: main.cpp  offsetfinder64.cpp  offsetfinder64.hpp
offsetfinder64.xcodeproj/: project.pbxproj
tools/: Makefile.am
tools/binrider/: Makefile.am  binrider  main.cpp
tools/offsetexporter/: Makefile.am  genreflector.py  main.cpp  reflector_kernelpatchfinder.cpp  reflector_kernelpatchfinder.hpp
