nobase_dist_include_HEADERS = liboffsetfinder64/common.h \
															liboffsetfinder64/OFexception.hpp \
															liboffsetfinder64/insn.hpp \
															liboffsetfinder64/vsegment.hpp \
															liboffsetfinder64/vmem.hpp \
															liboffsetfinder64/patch.hpp \
															liboffsetfinder64/patchfinder64.hpp \
															liboffsetfinder64/machopatchfinder64.hpp \
															liboffsetfinder64/kernelpatchfinder64.hpp \
															liboffsetfinder64/ibootpatchfinder64.hpp
