nobase_dist_include_HEADERS = libpatchfinder/OFexception.hpp \
															libpatchfinder/patch.hpp \
															libpatchfinder/patchfinder64.hpp \
															libpatchfinder/machopatchfinder64.hpp \
															libpatchfinder/patchfinder32.hpp \
															libpatchfinder/machopatchfinder32.hpp

#ibootpatchfinder
nobase_dist_include_HEADERS +=	libpatchfinder/ibootpatchfinder/ibootpatchfinder.hpp
nobase_dist_include_HEADERS +=	libpatchfinder/ibootpatchfinder/ibootpatchfinder32.hpp
nobase_dist_include_HEADERS +=	libpatchfinder/ibootpatchfinder/ibootpatchfinder64.hpp

#kernelpatchfinder
nobase_dist_include_HEADERS +=	libpatchfinder/kernelpatchfinder/kernelpatchfinder.hpp
nobase_dist_include_HEADERS +=	libpatchfinder/kernelpatchfinder/kernelpatchfinder32.hpp
nobase_dist_include_HEADERS +=	libpatchfinder/kernelpatchfinder/kernelpatchfinder64.hpp
